@@ -10,6 +10,8 @@ Version 0.3k2
 * Fixing various bugs and missing tags in Cale.
 * Fixed a but in Kiakai's anal catch scene.
 * Tweaked the output of Cavalcade a bit.
+* Better pics for Kiakai.
+* The "new" Miranda stuff added in Version 0.3k should be available for nasty Miranda too (note that take home doesn't have any scenes yet).
 
 --------------------------------------------
              PREVIOUS VERSIONS
